[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/graphics/icon_2.png" type="Texture" id=1]
[ext_resource path="res://cenas/pplaca.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "activate",
"speed": 5.0
} ]

[node name="pplaca_area" type="Area2D" groups=[
"__pplaca",
]]
z_index = -3
script = ExtResource( 2 )

[node name="pplaca_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="pplaca_collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 163.879, -13.4695 )
polygon = PoolVector2Array( -195.879, -18.5305, -131.879, -18.5305, -131.879, 45.4695, -195.879, 45.4695 )

[connection signal="area_entered" from="." to="." method="_on_pplaca_area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_pplaca_area_area_exited"]
